crates/ruff/src/rules/flake8_todo/snapshots/ruff__rules__flake8_todo__tests__missing-space-after-colon-in-todo_TD007.py.snap
---
source: crates/ruff/src/rules/flake8_todo/mod.rs
---
TD007.py:5:3: TD007 Missing space after colon in TODO
  |
5 | # TODO: so does this
6 | # T007 - errors
7 | # TODO(evanrittenhouse):this has no space after a colon
  |   ^^^^ TD007
8 | # TODO (evanrittenhouse):this doesn't either
9 | # TODO:neither does this
  |

TD007.py:6:3: TD007 Missing space after colon in TODO
   |
 6 | # T007 - errors
 7 | # TODO(evanrittenhouse):this has no space after a colon
 8 | # TODO (evanrittenhouse):this doesn't either
   |   ^^^^ TD007
 9 | # TODO:neither does this
10 | # FIXME:and lastly neither does this
   |

TD007.py:7:3: TD007 Missing space after colon in TODO
   |
 7 | # TODO(evanrittenhouse):this has no space after a colon
 8 | # TODO (evanrittenhouse):this doesn't either
 9 | # TODO:neither does this
   |   ^^^^ TD007
10 | # FIXME:and lastly neither does this
   |

TD007.py:8:3: TD007 Missing space after colon in TODO
   |
 8 | # TODO (evanrittenhouse):this doesn't either
 9 | # TODO:neither does this
10 | # FIXME:and lastly neither does this
   |   ^^^^^ TD007
   |


