crates/ruff/src/rules/flake8_todo/snapshots/ruff__rules__flake8_todo__tests__missing-text-in-todo_T005.py.snap
---
source: crates/ruff/src/rules/flake8_todo/mod.rs
expression: diagnostics
---
- kind:
    name: MissingTextInTODO
    body: Missing text in TODO
    suggestion: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 24
  fix:
    edits: []
  parent: ~
- kind:
    name: MissingTextInTODO
    body: Missing text in TODO
    suggestion: ~
    fixable: false
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 23
  fix:
    edits: []
  parent: ~

