crates/ruff/src/rules/flake8_todo/snapshots/ruff__rules__flake8_todo__tests__missing-text-in-todo_TD005.py.snap
---
source: crates/ruff/src/rules/flake8_todo/mod.rs
---
TD005.py:4:3: TD005 Missing text after 'TODO'
  |
4 | # TODO(evanrittenhouse): this has text, while the errors do not
5 | # T005 - errors
6 | # TODO(evanrittenhouse):
  |   ^^^^ TD005
7 | # TODO(evanrittenhouse)
8 | # FIXME
  |

TD005.py:5:3: TD005 Missing text after 'TODO'
  |
5 | # T005 - errors
6 | # TODO(evanrittenhouse):
7 | # TODO(evanrittenhouse)
  |   ^^^^ TD005
8 | # FIXME
  |

TD005.py:6:3: TD005 Missing text after 'TODO'
  |
6 | # TODO(evanrittenhouse):
7 | # TODO(evanrittenhouse)
8 | # FIXME
  |   ^^^^^ TD005
  |


