crates/ruff/src/rules/flake8_todo/snapshots/ruff__rules__flake8_todo__tests__todo-missing-author_T002.py.snap
---
source: crates/ruff/src/rules/flake8_todo/mod.rs
expression: diagnostics
---
- kind:
    name: TODOMissingAuthor
    body: Missing author into TODO
    suggestion: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 26
  fix:
    edits: []
  parent: ~

